--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
          <input type="submit" class="submit" />
       </form>
       <ul class="list-todo"></ul>
+      <button class="save">Save</button>
       <script src="./app.js"></script>
    </body>
 </html>
